[gd_scene load_steps=29 format=2]

[ext_resource path="res://data/game.gd" type="Script" id=1]
[ext_resource path="res://data/dungeon/dungeon.gd" type="Script" id=2]
[ext_resource path="res://data/dungeon/builder.gd" type="Script" id=3]
[ext_resource path="res://data/dungeon/floor.tscn" type="PackedScene" id=4]
[ext_resource path="res://data/dungeon/outer_wall.tscn" type="PackedScene" id=5]
[ext_resource path="res://data/dungeon/ceiling.tscn" type="PackedScene" id=6]
[ext_resource path="res://data/items/item_list.gd" type="Script" id=7]
[ext_resource path="res://data/enemies/enemy_list.gd" type="Script" id=8]
[ext_resource path="res://data/player/player.gd" type="Script" id=9]
[ext_resource path="res://data/items/item_sheet.png" type="Texture" id=10]
[ext_resource path="res://data/debug/debug.tscn" type="PackedScene" id=11]
[ext_resource path="res://data/player/idle.gd" type="Script" id=12]
[ext_resource path="res://data/player/viewmap.gd" type="Script" id=13]
[ext_resource path="res://data/player/glance.gd" type="Script" id=14]
[ext_resource path="res://data/player/move.gd" type="Script" id=15]
[ext_resource path="res://data/game_env.tres" type="Environment" id=16]
[ext_resource path="res://data/hud/hud.tscn" type="PackedScene" id=17]
[ext_resource path="res://data/sounds/hit.wav" type="AudioStream" id=18]
[ext_resource path="res://data/menu/menu.gd" type="Script" id=19]
[ext_resource path="res://data/menu/title.png" type="Texture" id=20]
[ext_resource path="res://data/map/mapview.tscn" type="PackedScene" id=21]
[ext_resource path="res://data/help/help.png" type="Texture" id=22]
[ext_resource path="res://data/dungeon/grid.gd" type="Script" id=23]
[ext_resource path="res://data/player/combat.gd" type="Script" id=24]

[sub_resource type="Animation" id=1]
resource_name = "Fire"
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerWeapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1360, 585 ), Vector2( 680, 400 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerWeapon:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerWeapon:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -28.3319 ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("PlayerWeapon/Audio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 18 )
} ],
"times": PoolRealArray( 0.7 )
}

[sub_resource type="Animation" id=2]
resource_name = "SpinFire"
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerWeapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1265, 703 ), Vector2( 680, 400 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerWeapon:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerWeapon:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0, -180.0, -270.0, -335.0, -367.044 ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("PlayerWeapon/Audio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 18 )
} ],
"times": PoolRealArray( 0.7 )
}

[sub_resource type="Animation" id=3]
resource_name = "Fire"
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyWeapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 680, 400 ), Vector2( 1360, 585 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemyWeapon:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EnemyWeapon:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 42.7473 ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("EnemyWeapon/Audio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 18 )
} ],
"times": PoolRealArray( 0.7 )
}

[sub_resource type="Animation" id=4]
resource_name = "SpinFire"
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyWeapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 680, 400 ), Vector2( 1360, 585 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemyWeapon:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EnemyWeapon:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 135.0, 360.0 ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("EnemyWeapon/Audio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 18 )
} ],
"times": PoolRealArray( 0.7 )
}

[node name="Game" type="Spatial"]
script = ExtResource( 1 )

[node name="WorldStart" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -36, 1.25, 0 )

[node name="Dungeon" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 0, -18 )
script = ExtResource( 2 )

[node name="Builder" type="Spatial" parent="Dungeon"]
script = ExtResource( 3 )

[node name="floor" parent="Dungeon" instance=ExtResource( 4 )]

[node name="outer_wall" parent="Dungeon" instance=ExtResource( 5 )]
transform = Transform( 1.48, 0, 0, 0, 1, 0, 0, 0, 1.48, 0, 0, 0 )

[node name="Grid" type="Spatial" parent="Dungeon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 0, 18 )
script = ExtResource( 23 )

[node name="ItemList" type="Spatial" parent="Dungeon"]
script = ExtResource( 7 )

[node name="Enemies" type="Spatial" parent="Dungeon"]
script = ExtResource( 8 )

[node name="ceiling" parent="Dungeon" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.51846, 0 )
visible = false

[node name="StartPos" type="Position3D" parent="Dungeon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16.5, 1.25, 16.5 )

[node name="Player" type="Spatial" parent="Dungeon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 21, 1.25, 21 )
script = ExtResource( 9 )

[node name="idle" type="Node" parent="Dungeon/Player"]
script = ExtResource( 12 )

[node name="move" type="Node" parent="Dungeon/Player"]
script = ExtResource( 15 )

[node name="combat" type="Node" parent="Dungeon/Player"]
script = ExtResource( 24 )

[node name="PlayerAnim" type="AnimationPlayer" parent="Dungeon/Player/combat"]
anims/Fire = SubResource( 1 )
anims/SpinFire = SubResource( 2 )

[node name="PlayerWeapon" type="Sprite" parent="Dungeon/Player/combat"]
position = Vector2( 680, 400 )
rotation = -6.40613
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 224, 96, 32, 32 )

[node name="Audio" type="AudioStreamPlayer" parent="Dungeon/Player/combat/PlayerWeapon"]
stream = ExtResource( 18 )

[node name="EnemyAnim" type="AnimationPlayer" parent="Dungeon/Player/combat"]
anims/Fire = SubResource( 3 )
anims/SpinFire = SubResource( 4 )

[node name="EnemyWeapon" type="Sprite" parent="Dungeon/Player/combat"]
position = Vector2( 1360, 585 )
rotation = 0.746081
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 10 )
flip_h = true
region_enabled = true
region_rect = Rect2( 32, 0, 32, 32 )

[node name="Audio" type="AudioStreamPlayer" parent="Dungeon/Player/combat/EnemyWeapon"]
stream = ExtResource( 18 )

[node name="glance" type="Node" parent="Dungeon/Player"]
script = ExtResource( 14 )

[node name="viewMap" type="Node" parent="Dungeon/Player"]
script = ExtResource( 13 )

[node name="Tween" type="Tween" parent="Dungeon/Player"]

[node name="Light" type="OmniLight" parent="Dungeon/Player"]
light_color = Color( 0.796875, 0.796875, 0.796875, 1 )
shadow_enabled = true
omni_range = 15.0

[node name="Camera" type="Camera" parent="Dungeon/Player"]
environment = ExtResource( 16 )
current = true

[node name="HUD" parent="Dungeon/Player/Camera" instance=ExtResource( 17 )]

[node name="debug" parent="Dungeon/Player/Camera" instance=ExtResource( 11 )]

[node name="Audio" type="AudioStreamPlayer" parent="Dungeon/Player"]
stream = ExtResource( 18 )

[node name="MainMenu" type="Node2D" parent="."]
visible = false
script = ExtResource( 19 )

[node name="Sprite" type="Sprite" parent="MainMenu"]
position = Vector2( 673, 377 )
scale = Vector2( 3, 3 )
texture = ExtResource( 20 )

[node name="MapView" parent="." instance=ExtResource( 21 )]
visible = false

[node name="Help" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.995122, 1.0023 )
z_index = 5
texture = ExtResource( 22 )
centered = false
